# linear-regression

./: README.md  pyproject.toml  regression.ipynb
dataset/: IMDB_codes.txt  TMDB_id.txt
