[tool.poetry]
name = "linear-regression"
version = "0.1.0"
description = ""
authors = ["BEN <benjamin.hill28@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "^3.0.5"
seaborn = "^0.11.1"
sklearn = "^0.0"
plotly = "4.14.3"
notebook = ">=5.3"
ipywidgets = ">=7.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
